fixed work experience overflow and changed profile pic + taskbar enlarged

--- a/whambamleo-home-creative/src/App.css
+++ b/whambamleo-home-creative/src/App.css
@@ -6,7 +6,7 @@ body {
 
 #taskbar {
   width: 100%;
-  height: 40px;
+  height: 50px;
   background-color: #2662DF;
 
   position: fixed;
@@ -30,7 +30,7 @@ body {
 }
 
 .taskbar-icon-image {
-  width: 30px;
+  width: 40px;
 }
 
 .taskbar-icon:hover {
