--- a/whambamleo-home-creative/src/CMD.css
+++ b/whambamleo-home-creative/src/CMD.css
@@ -39,7 +39,7 @@
 }
 
 .profileLeft {
-    border-radius: 1000px;
+    border-radius: 50px;
     width: 25%;
     margin: 15px;
     
